Criando documentação com autenticação em categoria
