# src/swagger.json
@@ -14,6 +14,9 @@
         "tags": ["Category"],
         "summary": "Create a category",
         "description": "Create a new category",
+        "security":[
+          {"bearerAuth": []}
+        ],
         "requestBody": {
           "content": {
             "application/json": {
@@ -125,6 +128,38 @@
            }
          }
       }
+    },
+    "/sessions":{
+      "post": {
+        "tags":["Session"],
+        "summary": "Authentication user",
+        "description": "Authentication user",
+        "requestBody": { 
+          "content":{
+            "application/json":{
+              "schema":{ 
+                "type": "object",
+                "properties":{ 
+                 "email": { 
+                   "type": "string"
+                 },
+                 "password": { 
+                   "type": "string"
+                 }
+                }
+              }
+            }
+          }
+        },
+        "responses":{
+          "200": { 
+            "description": "Success"
+          },
+          "400":{
+            "description": "Email or password incorrect!"
+          }
+        }
+      }
     }
   }
   ,
@@ -139,6 +174,15 @@
         "description":{
           "type": "string"
         }
+      }
+    }
+  },
+  "components":{
+    "securitySchemes":{
+      "bearerAuth":{
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
       }
     }
   }
